@@ -1,3 +1,13 @@
+2012-10-23  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Incorrect resolution of relative URLs containing a scheme in query parameters
+        https://bugs.webkit.org/show_bug.cgi?id=100084
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/styles/styles-url-linkify-expected.txt:
+        * inspector/styles/styles-url-linkify.html:
+
 2012-10-23  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r132149.
